# loki-core

./: .gitignore  Makefile  Readme.md  default.nix  setup_deps.sh
android/: CMakeLists.txt  main.cpp
android/android/: build.gradle
android/android/app/: build.gradle
android/android/app/src/main/: AndroidManifest.xml
android/android/app/src/main/java/: MainActivity.kt
patches/: chibi.patch  imgui.patch
src/: linux_main.cpp  loki_main.cpp  loki_main.hpp  loki_main.scm
src/lib/: imgui.sld
src/lib/imgui/: imgui.c  imgui.stub  imgui_src.c  imgui_src.h
